# litebox

./: Cargo.toml  bacon.toml
.config/: nextest.toml
.github/workflows/: ci.yml  semver-checks.yml
dev_tests/src/: ratchet.rs
litebox/: Cargo.toml
litebox/src/: path.rs  shim.rs
litebox/src/fd/: mod.rs  tests.rs
litebox/src/fs/: backend.rs  composer.rs  devices.rs  inode_allocator.rs  resolver.rs  tar_ro.rs  tests.rs
litebox/src/fs/nine_p/: client.rs  fcall.rs  mod.rs  tests.rs  transport.rs
litebox/src/mm/: exception_table.rs  linux.rs  mod.rs  tests.rs
litebox/src/net/: mod.rs  phy.rs  socket_channel.rs
litebox/src/platform/: arch.rs  mod.rs  page_mgmt.rs  trivial_providers.rs
litebox/src/platform/common_providers/: userspace_pointers.rs
litebox/src/sync/: futex.rs  mutex.rs
litebox/src/utilities/: loan_list.rs
litebox_common_linux/src/: lib.rs  loader.rs  mm.rs  user_pointers.rs  vmap.rs
litebox_common_linux/src/errno/: mod.rs
litebox_common_linux/src/signal/: mod.rs  x86_64.rs
litebox_common_lvbs/: Cargo.toml
litebox_common_lvbs/src/: lib.rs
litebox_common_optee/src/: lib.rs
litebox_platform_linux_kernel/: Cargo.toml
litebox_platform_linux_kernel/src/: lib.rs
litebox_platform_linux_kernel/src/arch/x86/mm/: paging.rs
litebox_platform_linux_kernel/src/mm/: tests.rs
litebox_platform_linux_userland/: Cargo.toml
litebox_platform_linux_userland/src/: lib.rs
litebox_platform_lvbs/: Cargo.toml
litebox_platform_lvbs/src/: lib.rs  syscall_entry.rs
litebox_platform_lvbs/src/arch/x86/: gdt.rs  interrupts.S  interrupts.rs  mod.rs  timer.rs
litebox_platform_lvbs/src/arch/x86/mm/: paging.rs
litebox_platform_lvbs/src/host/: linux.rs  lvbs_impl.rs  mod.rs  per_cpu_variables.rs
litebox_platform_lvbs/src/mm/: mod.rs  tests.rs  vmap.rs
litebox_platform_lvbs/src/mshv/: error.rs  heki.rs  hvcall.rs  hvcall_mm.rs  hvcall_vp.rs  mem_integrity.rs  mod.rs  ringbuffer.rs  vsm.rs  vsm_intercept.rs  vtl_switch.rs
litebox_platform_windows_userland/src/: lib.rs
litebox_runner_linux_on_windows_userland/: Cargo.toml
litebox_runner_linux_on_windows_userland/src/: lib.rs
litebox_runner_linux_on_windows_userland/tests/common/: mod.rs
litebox_runner_linux_userland/: Cargo.toml
litebox_runner_linux_userland/src/: lib.rs
litebox_runner_linux_userland/tests/: loader.rs  recvmmsg.c  run.rs
litebox_runner_linux_userland/tests/common/: mod.rs  pty.rs
litebox_runner_lvbs/: Cargo.toml
litebox_runner_lvbs/src/: lib.rs  main.rs
litebox_runner_optee_on_linux_userland/src/: lib.rs  tests.rs
litebox_runner_optee_on_linux_userland/tests/: aes-ta-cmds.json  hello-ta-cmds.json  kmpp-ta-cmds.json  random-ta-cmds.json
litebox_runner_snp/: Cargo.toml
litebox_runner_snp/src/: main.rs
litebox_shim_linux/: Cargo.toml  README.md
litebox_shim_linux/src/: channel.rs  lib.rs  transport.rs  wait.rs
litebox_shim_linux/src/loader/: auxv.rs  elf.rs  mod.rs  stack.rs
litebox_shim_linux/src/syscalls/: epoll.rs  eventfd.rs  file.rs  misc.rs  mm.rs  mod.rs  net.rs  pipe.rs  process.rs  tests.rs  unix.rs
litebox_shim_linux/src/syscalls/signal/: mod.rs  x86_64.rs
litebox_shim_optee/: Cargo.toml
litebox_shim_optee/src/: idk.rs  lib.rs  msg_handler.rs  ptr.rs  session.rs
litebox_shim_optee/src/loader/: elf.rs  ta_stack.rs
litebox_shim_optee/src/syscalls/: cryp.rs  ldelf.rs  mm.rs  pta.rs  tee.rs  tests.rs
litebox_syscall_rewriter/src/: lib.rs  main.rs
