[package]
name = "litebox_runner_snp"
version = "0.1.0"
edition = "2024"

[features]
debug = []

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
litebox = { path = "../litebox", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_linux_kernel = { path = "../litebox_platform_linux_kernel/", version = "0.1.0" }
litebox_shim_linux = { version = "0.1.0", path = "../litebox_shim_linux", default-features = false }
litebox_util_log = { version = "0.1.0", path = "../litebox_util_log" }
log = { version = "0.4", default-features = false }

[lints]
workspace = true
