[package]
name = "litebox_shim_linux"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bitflags = "2.13.1"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_util_log = { version = "0.1.0", path = "../litebox_util_log" }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
thiserror = { version = "2.0.6", default-features = false }
syscalls = { version = "0.6", default-features = false }
seq-macro = "0.3"
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
litebox_syscall_rewriter = { version = "0.1.0", path = "../litebox_syscall_rewriter", default-features = false }
object = { version = "0.36.7", default-features = false, features = ["elf", "read_core"] }

[features]
alarm_fallback = []

[dev-dependencies]
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
libc = "0.2.177"
tempfile = "3"

# The unit tests need a concrete platform to run against. The platform is selected
# by the build target so the tests can run on whichever userland platform matches
# the host.
[target.'cfg(target_os = "linux")'.dev-dependencies]
litebox_platform_linux_userland = { path = "../litebox_platform_linux_userland/", version = "0.1.0" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
litebox_platform_windows_userland = { path = "../litebox_platform_windows_userland/", version = "0.1.0" }

[lints]
workspace = true
